# paperPusher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: capitalize.cmake
lib/: CMakeLists.txt
lib/logerr/: CMakeLists.txt  Exception.h  ExceptionDialog.cpp  StackTraceSIGSEGV.cpp  StackTraceSIGSEGV.h  StackTraceSigSev.cpp  StackTraceSigSev.h  appinfo.cpp.in  appinfo.h  appinfo.h.in  gitInfo.h.in  logerr.h  logerrMacros.h  timestamp.h
lib/logerr/cmake/: gitInfo.cmake
lib/logerr/include/: ExceptionDialog.h  LogModel.h  LogProxyModel.h  LogStream.h  StackTraceException.h  logDock.h  logerr.h  logerrMacros.h
lib/logerr/logerr/: CMakeLists.txt  appinfo.cpp.in
lib/logerr/logerr/include/: StackTrace.h  backtraceSymbols.h  logerrConsoleApplication.h
lib/logerr/logerr/src/: StackTrace.cpp  backtraceSymbols.cpp
lib/logerr/qlogerr/: CMakeLists.txt
lib/logerr/qlogerr/include/: logerrGuiApplication.h
lib/logerr/src/: Application.cpp  Exception.cpp  ExceptionDialog.cpp  LogFileWriter.cpp  LogModel.cpp  LogProxyModel.cpp  LogStream.cpp  StackTraceException.cpp  StackTraceSIGSEGV.cpp  logDock.cpp  main.cpp
src/: CMakeLists.txt  appinfo.h.in  main.cpp  mainWindow.cpp  mainWindow.h
